--- a/index.html
+++ b/index.html
@@ -11,5 +11,26 @@
     <a-camera gps-new-camera='gpsMinDistance: 50'></a-camera>
     <a-entity material='color: red' geometry='primitive: box' gps-new-entity-place="latitude:-8.773237285159516; longitude: -63.83027053079588" scale="100 100 100"></a-entity>
 </a-scene>
+
+<div id="coords" style="position: absolute; top: 10px; left: 10px; background: white; padding: 10px; border: 1px solid black;">
+    Coordenadas: Carregando...
+</div>
+
+<script>
+if ("geolocation" in navigator) {
+    navigator.geolocation.getCurrentPosition(function(position) {
+        var coordsDiv = document.getElementById('coords');
+        var latitude = position.coords.latitude;
+        var longitude = position.coords.longitude;
+        coordsDiv.innerHTML = "Coordenadas: Latitude " + latitude + ", Longitude " + longitude;
+    }, function(error) {
+        console.error("Erro ao obter localização:", error);
+        document.getElementById('coords').innerHTML = "Erro ao obter localização.";
+    });
+} else {
+    document.getElementById('coords').innerHTML = "Geolocalização não é suportada neste navegador.";
+}
+</script>
+
 </body>
-</html> 
+</html>
