--- a/index.html
+++ b/index.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>AR.js A-Frame Location-based AR</title>
-<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
+  <title>Interactive AR Cube Placement</title>
+  <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
-<a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;" vr-mode-ui="enabled: false">
+  <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;" vr-mode-ui="enabled: false">
     <a-camera gps-new-camera rotation-reader></a-camera>
-    <a-box position="0 0 0" material="color: blue;" scale="1 1 1" gps-new-entity-place="latitude: 0; longitude: 0;"></a-box>
-</a-scene>
+    <!-- Placeholder for the cube -->
+    <a-box id="interactive-cube" position="0 0 0" material="color: blue;" scale="1 1 1" visible="false"></a-box>
+  </a-scene>
 
-<script>
-document.addEventListener('DOMContentLoaded', function () {
-    if ("geolocation" in navigator) {
-        navigator.geolocation.getCurrentPosition(function (position) {
-            const latitude = position.coords.latitude;
-            const longitude = position.coords.longitude;
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      // Get the cube element
+      var cube = document.getElementById('interactive-cube');
 
-            // Set the initial position of the cube
-            const box = document.querySelector('a-box');
-            box.setAttribute('gps-new-entity-place', `latitude: ${latitude}; longitude: ${longitude}`);
-        }, function (error) {
-            console.error("Erro ao obter localização:", error);
-        });
-    } else {
-        console.log("Geolocalização não é suportada neste navegador.");
-    }
-});
-</script>
+      // Event listener for touch or mouse click
+      document.addEventListener('click', function (event) {
+        // Get the position in screen space
+        var touch = event.changedTouches ? event.changedTouches[0] : event;
+        var x = (touch.clientX / window.innerWidth) * 2 - 1;
+        var y = - (touch.clientY / window.innerHeight) * 2 + 1;
+
+        // Use raycaster to find the intersection point with the ground
+        var raycaster = new THREE.Raycaster();
+        var mouse = new THREE.Vector2(x, y);
+        raycaster.setFromCamera(mouse, cube.sceneEl.camera);
+        
+        // Assume the ground is at y = 0
+        var groundPlane = new THREE.Plane(new THREE.Vector3(0, 1, 0), 0);
+        var intersectPoint = new THREE.Vector3();
+
+        if (raycaster.ray.intersectPlane(groundPlane, intersectPoint)) {
+          // Set the position of the cube and make it visible
+          cube.setAttribute('position', intersectPoint);
+          cube.setAttribute('visible', 'true');
+        }
+      });
+    });
+  </script>
 </body>
 </html>
