--- a/index.html
+++ b/index.html
@@ -1,41 +1,69 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Interactive AR Cube Placement</title>
+  <title>AR Cube Selection with HUD</title>
   <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
+  <style>
+    #hud {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 2;
+      background: rgba(255, 255, 255, 0.8);
+      padding: 10px;
+      border-radius: 5px;
+    }
+    .hud-button {
+      display: inline-block;
+      margin: 5px;
+      padding: 10px;
+      border: 1px solid #333;
+      background-color: #eee;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body style="margin: 0; overflow: hidden;">
+  <div id="hud">
+    <div class="hud-button" data-color="red" style="background-color: red;">Red Cube</div>
+    <div class="hud-button" data-color="green" style="background-color: green;">Green Cube</div>
+    <div class="hud-button" data-color="blue" style="background-color: blue;">Blue Cube</div>
+  </div>
+
   <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;" vr-mode-ui="enabled: false">
     <a-camera gps-new-camera rotation-reader></a-camera>
-    <!-- Placeholder for the cube -->
     <a-box id="interactive-cube" position="0 0 0" material="color: blue;" scale="1 1 1" visible="false"></a-box>
   </a-scene>
 
   <script>
     document.addEventListener('DOMContentLoaded', function () {
-      // Get the cube element
+      var selectedColor = 'blue'; // Default color
       var cube = document.getElementById('interactive-cube');
 
-      // Event listener for touch or mouse click
+      // HUD button click event to select the color of the cube
+      document.querySelectorAll('.hud-button').forEach(function (button) {
+        button.addEventListener('click', function () {
+          selectedColor = this.getAttribute('data-color');
+        });
+      });
+
+      // Event listener for touch or mouse click to place the cube
       document.addEventListener('click', function (event) {
-        // Get the position in screen space
         var touch = event.changedTouches ? event.changedTouches[0] : event;
         var x = (touch.clientX / window.innerWidth) * 2 - 1;
         var y = - (touch.clientY / window.innerHeight) * 2 + 1;
 
-        // Use raycaster to find the intersection point with the ground
         var raycaster = new THREE.Raycaster();
         var mouse = new THREE.Vector2(x, y);
         raycaster.setFromCamera(mouse, cube.sceneEl.camera);
-        
-        // Assume the ground is at y = 0
+
         var groundPlane = new THREE.Plane(new THREE.Vector3(0, 1, 0), 0);
         var intersectPoint = new THREE.Vector3();
 
         if (raycaster.ray.intersectPlane(groundPlane, intersectPoint)) {
-          // Set the position of the cube and make it visible
           cube.setAttribute('position', intersectPoint);
+          cube.setAttribute('material', 'color', selectedColor);
           cube.setAttribute('visible', 'true');
         }
       });
