--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AR Cube Selection with HUD</title>
+  <title>Interactive AR Cube Placement</title>
   <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
   <style>
@@ -21,6 +21,8 @@
       border: 1px solid #333;
       background-color: #eee;
       cursor: pointer;
+      border-radius: 5px;
+      text-align: center;
     }
   </style>
 </head>
@@ -33,16 +35,17 @@
 
   <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;" vr-mode-ui="enabled: false">
     <a-camera gps-new-camera rotation-reader></a-camera>
-    <a-box id="interactive-cube" position="0 0 0" material="color: blue;" scale="1 1 1" visible="false"></a-box>
+    <!-- Placeholder for the cube -->
+    <a-box id="interactive-cube" material="color: blue;" scale="1 1 1" visible="false"></a-box>
   </a-scene>
 
   <script>
     document.addEventListener('DOMContentLoaded', function () {
-      var selectedColor = 'blue'; // Default color
-      var cube = document.getElementById('interactive-cube');
+      let selectedColor = 'blue'; // Default color
+      const cube = document.getElementById('interactive-cube');
 
       // HUD button click event to select the color of the cube
-      document.querySelectorAll('.hud-button').forEach(function (button) {
+      document.querySelectorAll('.hud-button').forEach(button => {
         button.addEventListener('click', function () {
           selectedColor = this.getAttribute('data-color');
         });
@@ -50,18 +53,22 @@
 
       // Event listener for touch or mouse click to place the cube
       document.addEventListener('click', function (event) {
-        var touch = event.changedTouches ? event.changedTouches[0] : event;
-        var x = (touch.clientX / window.innerWidth) * 2 - 1;
-        var y = - (touch.clientY / window.innerHeight) * 2 + 1;
+        // Get the touch/click position
+        const touch = event.changedTouches ? event.changedTouches[0] : event;
+        const x = (touch.clientX / window.innerWidth) * 2 - 1;
+        const y = - (touch.clientY / window.innerHeight) * 2 + 1;
 
-        var raycaster = new THREE.Raycaster();
-        var mouse = new THREE.Vector2(x, y);
+        // Use raycaster to find the intersection point with the ground
+        const raycaster = new THREE.Raycaster();
+        const mouse = new THREE.Vector2(x, y);
         raycaster.setFromCamera(mouse, cube.sceneEl.camera);
 
-        var groundPlane = new THREE.Plane(new THREE.Vector3(0, 1, 0), 0);
-        var intersectPoint = new THREE.Vector3();
+        // Assume the ground is at y = 0
+        const groundPlane = new THREE.Plane(new THREE.Vector3(0, 1, 0), 0);
+        const intersectPoint = new THREE.Vector3();
 
         if (raycaster.ray.intersectPlane(groundPlane, intersectPoint)) {
+          // Set the position of the cube and make it visible
           cube.setAttribute('position', intersectPoint);
           cube.setAttribute('material', 'color', selectedColor);
           cube.setAttribute('visible', 'true');
